--- a/Source/Graph#.Controls/GraphSharp.Controls.nuspec
+++ b/Source/Graph#.Controls/GraphSharp.Controls.nuspec
@@ -20,7 +20,6 @@
 	</dependencies>
   </metadata>
   <files>
-	<file src="..\..\bin\GraphSharp.dll" target="lib" />
-	<file src="..\..\bin\RibbonControlsLibrary.dll" target="lib" />
+	<file src="..\Graph#\bin\Release\GraphSharp.dll" target="lib\net35" />
   </files>
 </package>
