clean up solution

--- a/Tutorials/MyTestApp/packages.config
+++ b/Tutorials/MyTestApp/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GraphSharp.Controls" version="1.0.1.0" targetFramework="net35" />
+  <package id="GraphSharp" version="1.0.1.0" targetFramework="net35" />
   <package id="QuickGraph" version="3.3.51106.0" targetFramework="net35" />
   <package id="WPFExtensions" version="1.0.0" targetFramework="net35" />
 </packages>
