--- a/Tutorials/MyTestApp/MyTestApp.csproj
+++ b/Tutorials/MyTestApp/MyTestApp.csproj
@@ -18,6 +18,8 @@
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
     <UpgradeBackupLocation />
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">.\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,10 +40,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="GraphSharp, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\GraphSharp.Controls.1.0.1.0\lib\net35\GraphSharp.dll</HintPath>
+      <HintPath>packages\GraphSharp.1.0.1.0\lib\net35\GraphSharp.dll</HintPath>
     </Reference>
     <Reference Include="GraphSharp.Controls, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\GraphSharp.Controls.1.0.1.0\lib\net35\GraphSharp.Controls.dll</HintPath>
+      <HintPath>packages\GraphSharp.1.0.1.0\lib\net35\GraphSharp.Controls.dll</HintPath>
     </Reference>
     <Reference Include="QuickGraph, Version=3.3.51106.0, Culture=neutral, PublicKeyToken=f3fb40175eec2af3, processorArchitecture=MSIL">
       <HintPath>packages\QuickGraph.3.3.51106.0\lib\net35\QuickGraph.dll</HintPath>
@@ -140,6 +142,7 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
