--- a/Source/Graph#.Sample/app.config
+++ b/Source/Graph#.Sample/app.config
@@ -23,6 +23,6 @@
     </GraphSharp.Sample.Settings>
   </userSettings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
   </startup>
 </configuration>
