--- a/Source/.nuget/NuGet.targets
+++ b/Source/.nuget/NuGet.targets
@@ -40,7 +40,8 @@
     
     <PropertyGroup>
         <!-- NuGet command -->
-        <NuGetExePath Condition=" '$(NuGetExePath)' == '' ">$(NuGetToolsPath)\nuget.exe</NuGetExePath>
+        <NuGetExeFilename Condition=" '$(NuGetExeFilename)' == '' ">NuGet.exe</NuGetExeFilename>
+        <NuGetExePath Condition=" '$(NuGetExePath)' == '' ">$(NuGetToolsPath)\$(NuGetExeFilename)</NuGetExePath>
         <PackageSources Condition=" $(PackageSources) == '' ">@(PackageSource)</PackageSources>
         
         <NuGetCommand Condition=" '$(OS)' == 'Windows_NT'">"$(NuGetExePath)"</NuGetCommand>
@@ -70,7 +71,11 @@
         <!-- Raise an error if we're unable to locate nuget.exe  -->
         <Error Condition="'$(DownloadNuGetExe)' != 'true' AND !Exists('$(NuGetExePath)')" Text="Unable to locate '$(NuGetExePath)'" />
         <SetEnvironmentVariable EnvKey="VisualStudioVersion" EnvValue="$(VisualStudioVersion)" Condition=" '$(VisualStudioVersion)' != '' AND '$(OS)' == 'Windows_NT' " />
-        <DownloadNuGet OutputFilename="$(NuGetExePath)" Condition=" '$(DownloadNuGetExe)' == 'true' AND !Exists('$(NuGetExePath)')"  />
+        <DownloadNuGet OutputFilename="$(NuGetExePath)"
+            Condition="'$(OS)' == 'Windows_NT' AND '$(DownloadNuGetExe)' == 'true' AND !Exists('$(NuGetExePath)')" />
+        <Exec Command="wget http://nuget.org/$(NuGetExeFilename) || curl -O -L http://nuget.org/$(NuGetExeFilename)"
+            WorkingDirectory="$(NuGetToolsPath)"
+            Condition="'$(OS)' != 'Windows_NT' AND '$(DownloadNuGetExe)' == 'true' AND !Exists('$(NuGetExePath)')" />
     </Target>
 
     <Target Name="RestorePackages" DependsOnTargets="CheckPrerequisites">
@@ -109,7 +114,7 @@
 
                     Log.LogMessage("Downloading latest version of NuGet.exe...");
                     WebClient webClient = new WebClient();
-                    webClient.DownloadFile("https://nuget.org/nuget.exe", OutputFilename);
+                    webClient.DownloadFile("https://nuget.org/NuGet.exe", OutputFilename);
 
                     return true;
                 }
