--- a/Source/Graph#.Controls/GraphSharp.Controls.csproj
+++ b/Source/Graph#.Controls/GraphSharp.Controls.csproj
@@ -200,5 +200,5 @@
     </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" />
 </Project>
