--- a/Source/Graph#.Controls/GraphSharp.Controls.nuspec
+++ b/Source/Graph#.Controls/GraphSharp.Controls.nuspec
@@ -4,16 +4,16 @@
     <id>GraphSharp.SIL</id>
     <version>$version$</version>
     <title>GraphSharp (SIL)</title>
-    <authors>palesz, SIL</authors>
-    <owners>SIL</owners>
-    <licenseUrl>http://graphsharp.codeplex.com/license</licenseUrl>
+    <authors>palesz, SIL International</authors>
+    <owners>SIL International</owners>
+    <license type="expression">Apache-2.0</license>
     <projectUrl>https://github.com/sillsdev/graphsharp</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Graph# (SIL) is a graph layout framework. It contains some layout algorithms and a GraphLayout control for WPF applications. This is a fork of the Graph# library.</description>
-    <copyright>Copyright 2015</copyright>
+    <copyright>Copyright 2019</copyright>
     <tags>WPF QuickGraph Graph# edge routing graph layout</tags>
   </metadata>
   <files>
-    <file src="bin\$configuration$\GraphSharp*.pdb" target="lib\net40-Client" />
+    <file src="bin\$configuration$\GraphSharp*.pdb" target="lib\net461" />
   </files>
 </package>
